<resources>
    <string name="app_name">Login</string>
    <string name="titleLogin">Iniciar Sesión</string>
    <string name="titleRegister">Registro</string>
    <string name="titleHome">Inicio</string>
    <string name="titleProfile">Perfil</string>
    <string name="loginText">Inicia sesión en tu cuenta</string>
    <string name="registerText">Crear cuenta</string>
    <string name="signOptions">- O inicia sesión con -</string>
    <string name="signIn">Acceder</string>
    <string name="signUp">Registrarse</string>
    <string name="emailHint">Email</string>
    <string name="passHint">Contraseña</string>
    <string name="confirmPassHint">Confirmar contraseña</string>
    <string name="questionAccount">¿No tienes cuenta?</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="age">Edad</string>
    <string name="profession">Profesión</string>
    <string name="save">Guardar</string>
</resources>