<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginVertical="20dp"
        android:text="@string/registerText" />

    <EditText
        android:id="@+id/etSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etSignUpPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etSignUpConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/signOptions" />

    <Button
        android:id="@+id/btGoogle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@mipmap/ic_sign_google_foreground"
        android:foreground="@mipmap/ic_sign_google_foreground" />

</LinearLayout>