<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lyLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="20dp"
            android:text="@string/loginText" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn" />

        <TextView
            android:id="@+id/tvOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/signOptions" />

        <Button
            android:id="@+id/btGoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/ic_sign_google_foreground"
            android:foreground="@mipmap/ic_sign_google_foreground" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionAccount" />

        <Button
            android:id="@+id/btCreate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/transparent"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/link"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>