<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvProfession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profession"
        android:textAlignment="center"/>


    <Button
        android:id="@+id/btLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cerrar sesion" />

</LinearLayout>